# Attendance_monitoring

./: .gitignore  LICENSE  README.md  env.example  facial_features_extractor.py  init_database.py  known_faces_database.py  modern_web_app.py  pyproject.toml  requirements.txt  run_codespace.sh
.devcontainer/: devcontainer.json
known_faces_optimized/SampleStudent/: README.txt
